# c_chess

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.zig  build.zig.zon  compile_commands.json  xmake.lua
assets/: conf.toml
cmake/: zig.cmake
include/: board_logic.h  conf.h  rendering.h  state.h  utarray.h  win.h
include/screens/: button.h  game_screen.h  start_scene.h  start_screen.h
src/: board_logic.c  conf.c  main.c  rendering.c  win.c
src/screens/: button.c  game_screen.c  start_screen.c
